Fixed the button getting cut up on mobile

--- a/HelpMyStreetFE/HelpMyStreetFE/src/sass/components/home/_home.scss
+++ b/HelpMyStreetFE/HelpMyStreetFE/src/sass/components/home/_home.scss
@@ -4,6 +4,22 @@
 @import "./help.scss";
 @import "./stats.scss";
 
-.btn--sign-up{
-    white-space: nowrap;
+@media screen and (max-width: $sm-screen){
+    .btn--sign-up {
+        white-space: nowrap;
+        display: flex;
+        justify-content: center;
+        padding: 0;
+    }
+
+    .w100 {
+        width: 100%;
+    }
 }
+
+@media screen and (max-width: $med-screen){
+    .btn--sign-up{
+        margin-top: $med-margin;
+    }
+}
+    
